# backend/docs/swagger.json
@@ -24,7 +24,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "healthyHandler"
+                    "healthy Handler"
                 ],
                 "summary": "Check healthy",
                 "responses": {
@@ -47,9 +47,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "loginHandler"
+                    "login Handler"
                 ],
-                "summary": "Get Access token",
+                "summary": "Get access token",
                 "responses": {
                     "200": {
                         "description": "OK",
